[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/menu/salir.gd" type="Script" id=1]
[ext_resource path="res://scripts/menu/iniciar.gd" type="Script" id=2]
[ext_resource path="res://imgs/creditos/ganar.png" type="Texture" id=3]
[ext_resource path="res://musica/moneda.wav" type="AudioStream" id=4]
[ext_resource path="res://scripts/menu/manager.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 157.5, 33 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 91, 31 )

[node name="creditos_ganar" type="Node2D"]
script = ExtResource( 5 )
botones_path = [ NodePath(""), NodePath("") ]

[node name="fondo" type="Sprite" parent="."]
position = Vector2( 639, 362 )
texture = ExtResource( 3 )

[node name="jugar" type="Sprite" parent="."]
script = ExtResource( 2 )
scene = "res://Menu.tscn"

[node name="area_jugar" type="Area2D" parent="jugar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="jugar/area_jugar"]
position = Vector2( 639.5, 468 )
shape = SubResource( 1 )

[node name="salir" type="Sprite" parent="."]
script = ExtResource( 1 )

[node name="area_salir" type="Area2D" parent="salir"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="salir/area_salir"]
position = Vector2( 638, 370 )
shape = SubResource( 2 )

[node name="monedita" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="mouse_entered" from="jugar/area_jugar" to="." method="_on_area_jugar_mouse_entered"]
[connection signal="mouse_exited" from="jugar/area_jugar" to="." method="_on_area_jugar_mouse_exited"]
[connection signal="mouse_entered" from="salir/area_salir" to="." method="_on_area_salir_mouse_entered"]
[connection signal="mouse_exited" from="salir/area_salir" to="." method="_on_area_salir_mouse_exited"]
